# ares-2

./: .gitignore  Cargo.toml  contributors.md  readme.md
ares/: Cargo.toml
ares/src/: lib.rs  main.rs  matrix_driver.rs  readme.md  repl.rs
ares/src/compiler/: compile_context.rs  error.rs  mod.rs
ares/src/compiler/binding/: error.rs  mod.rs  test.rs
ares/src/compiler/binding/tests/: block.bind.artest  fn_call.bind.artest  lambda.bind.artest  lambda_one_arg.bind.artest  lambda_two_args.bind.artest  literals.bind.artest  math.bind.artest
ares/src/compiler/emit/: emit_buffer.rs  error.rs  mod.rs  test.rs
ares/src/compiler/lowering/: mod.rs
ares/src/compiler/parse/: mod.rs  util.rs  validate.rs
ares/src/host/: error.rs  mod.rs  state.rs
ares/src/test/: bind.rs  emit.rs  matrix_driver.rs  mod.rs
ares/src/vm/: continuation.rs  error.rs  lambda.rs  mod.rs  module.rs  readme.md  stack.rs  test.rs  value.rs
ares/src/vm/concept/: continuation.rs  function.rs  lambda.rs  mod.rs
ares/src/vm/util/: mod.rs  module.rs  stack.rs
ares/tests/: aa_continuation.artest  assignment.artest  basic.artest  block.artest  closure.artest  comparison.artest  compiler_to_vm.rs  continuation.artest  end_to_end.rs  examples.artest  function_call.artest  global_vars.artest  hard_parse.artest  if.artest  lambda.artest  lists.artest  literals.artest  math.artest  matrix.rs  old_emit_tests.artest  operator_precedence.artest  parser_regression.artest  readme.md  reset_parsing.artest_disabled  shift_parsing.artest_disabled  top_level.artest  variable_definition.artest
compiler/: Cargo.toml
compiler/src/: compile_context.rs  error.rs  lib.rs
compiler/src/emit/: emit_buffer.rs  error.rs  mod.rs
compiler/src/parse/: errors.rs  mod.rs  parse.rs  tokens.rs  util.rs
docs/: delimited-continuations.md  lambda.md  syntax.md  unanswered.md
notes/: bind_operator.md  delimited-continuations.md  exceptions.md  if.md  modules.md  reflection.md  unanswered.md
src/: .lib.rs.swp  .value.rs.swp  intern.rs  lambda.rs  lib.rs  main.rs  util.rs  value.rs
src/compiler/: compile_context.rs  error.rs  mod.rs
src/compiler/binding/: error.rs  mod.rs
src/compiler/emit/: emit_buffer.rs  error.rs  mod.rs
src/compiler/parse/: errors.rs  mod.rs  parse.rs  tokens.rs  util.rs
src/compiler/parse/exp/: mod.rs  syntax.lalrpop  syntax.rs
src/host/: mod.rs
src/vm/: function.rs  intern.rs  lambda.rs  mod.rs  module.rs  stack.rs  value.rs
syntax/: Cargo.toml  build.rs
syntax/src/: intern.rs  lib.rs  syntax.lalrpop
tests/: basic.artest  compiler_to_vm.rs
virtual-machine/: Cargo.toml
virtual-machine/src/: lambda.rs  lib.rs  main.rs  value.rs
