[package]
name = "ares"
version = "0.1.0"
authors = ["Ty Overby <ty@pre-alpha.com>"]

[lib]
name = "ares"
path = "./src/lib.rs"

[[bin]]
name = "ares-bin"
path = "./src/main.rs"

[dependencies]
libc = "*"
itertools = "*"
typed-arena = "1.0.*"

[dependencies.gc]
git = "https://github.com/Manishearth/rust-gc.git"

[dependencies.gc_plugin]
git = "https://github.com/Manishearth/rust-gc.git"
