[package]
name = "ares"
version = "0.1.0"
authors = ["Ty Overby <ty@pre-alpha.com>"]
build = "build.rs"

[lib]
name = "ares"
path = "./src/lib.rs"

[[bin]]
name = "ares-bin"
path = "./src/main.rs"

[dependencies]
libc = "*"
itertools = "*"
typed-arena = "1.0.*"

[dependencies.gc]
#path = "../rust-gc/gc/"
git = "https://github.com/Manishearth/rust-gc.git"

[dependencies.lalrpop-util]
version = "0.9.0"

[build-dependencies.lalrpop]
version = "0.9.0"
