[package]
name = "ares"
version = "0.1.0"
authors = ["Ty Overby <ty@pre-alpha.com>"]

[lib]
name = "ares"
path = "./src/lib.rs"

[[bin]]
name = "ares-bin"
path = "./src/main.rs"

[dependencies]
libc = "*"
itertools = "*"
typed-arena = "1.0.*"

[dependencies.gc]
git = "https://github.com/Manishearth/rust-gc.git"

[dependencies.ares-syntax]
path = "../syntax"

[dependencies.lalrpop-util]
version = "0.9.0"

[dev-dependencies]
latin = "0.1.4"
