[package]
name = "ares"
version = "0.1.0"
authors = ["Ty Overby <ty@pre-alpha.com>"]

[[bin]]
name = "ares-repl"
path = "./src/repl.rs"

[lib]
name = "ares"
path = "./src/lib.rs"

[dependencies]
libc = "*"
itertools = "*"
typed-arena = "1.0.*"
colored = "1.2"
linenoise-rust = "0.2.0"

[dependencies.gc]
git = "https://github.com/Manishearth/rust-gc.git"

[dependencies.ares-syntax]
path = "../syntax"

[dependencies.lalrpop-util]
version = "0.9.0"

[dev-dependencies]
latin = "0.1.5"
