[package]
name = "ares"
version = "0.1.0"
authors = ["Ty Overby <ty@pre-alpha.com>"]

[[bin]]
name = "ares-repl"
path = "./src/repl.rs"

[lib]
name = "ares"
path = "./src/lib.rs"

[dependencies]
libc = "*"
itertools = "*"
typed-arena = "*"
colored = "*"
linenoise-rust = "*"
gc = "*"
gc_derive = "*"

[dependencies.ares-syntax]
path = "../syntax"

[dependencies.lalrpop-util]
version = "*"

[dev-dependencies]
latin = "*"
