[package]
name = "ares-syntax"
version = "0.1.0"
authors = ["Ty Overby <ty@pre-alpha.com>"]
build = "build.rs"

[lib]
name = "ares_syntax"
path = "./src/lib.rs"

[dependencies]
itertools = "*"
typed-arena = "*"
gc = "*"

[dependencies.lalrpop-util]
version = "*"

[build-dependencies.lalrpop]
version = "*"
